--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
   <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Rohit Khimavat. It used data from Weatherstack and ipstack</p>
     <img src="./img/about.jfif">
     </div>
     {{>footer}}
